# mrcall-desktop

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  =1.17.0  =1.50.0  =6.0.0  CHANGELOG.md  CLAUDE.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  MRPARK_BUSINESS_MODEL.md  MRPARK_BUSINESS_MODEL.md.bak  MRPARK_SPEC.md  Makefile  Procfile  README.md  STARCHAT_REQUESTS.md  alembic.ini  consolidate-docs.sh  docker-compose.yml  dt_variables_for_mrcall.json  entrypoint.sh  kb.sh  morning_sync.py  package-lock.json  package.json  pyproject.toml  railway.json  requirements.txt  setup.sh  start-mcp.sh  start.sh  test_api.sh  tsconfig.node.json  upload.sh  zylch-cli  zylch_cli.py
engine/: .dockerignore  .gitignore  CLAUDE.md  GEMINI.md  README.md  ZYLCH_BUSINESS_MODEL.md  contacts-architecture-task.txt  persona-architecture-planning.txt  pyinstaller_runtime_hook.py  pyproject.toml  zylch.spec
engine/.claude/: settings.local.json
engine/.claude/commands/: doc-endsession.md  doc-migration.md  doc-startsession.md
engine/docs/: ARCHITECTURE.md  CONVENTIONS.md  README.md  active-context.md  harness-backlog.md  quality-grades.md  system-rules.md
engine/docs/execution-plans/: claude-code-patterns.md  fix-email-timezone.md  fix-task-autoclose-stale.md  next-features.md  task-pipeline-overhaul.md  topic-dedup-playbook.md  whatsapp-pipeline-parity-phase2-handoff.md  whatsapp-pipeline-parity.md  whatsapp-voice-transcription.md
engine/docs/features/: MICROSOFT_CALENDAR_TODO.md  WHATSAPP_INTEGRATION_TODO.md  calendar-integration.md  email-archive.md  email-triage.md  relationship-intelligence.md  task-management.md  user-persona-learning.md
engine/docs/guides/: cli-commands.md  quick-start.md
engine/docs/plans/: standalone-transformation.md
engine/docs/qa/: standalone-qa-report.md  testing-live.md
engine/migrations/: 20241217_add_get_unprocessed_emails.sql  20241217_add_memory_processed_at_calendar.sql  20241228_add_task_processed_at.sql
engine/scripts/: backfill_email_blobs.py  backfill_email_date_utc.py  backfill_person_identifiers.py  cleanup_custom124.py  diag_custom124.py  diag_memory.py  diag_sent_email.py  init-db.sh  install.ps1  install.sh  migrate_profile_to_uid.py  migrate_to_unified_credentials.py  repair_env.py  reset_database.sql  test_hybrid_search.py  uninstall.sh  verify_db_setup.py  verify_task_spam_filter.py  ws_smoke.py
engine/scripts/caddy/: desktop.Caddyfile
engine/scripts/logrotate.d/: mrcalld
engine/scripts/server/: update-daemons.sh
engine/scripts/systemd/: zylch-server@.service
engine/scripts/tmpfiles.d/: mrcalld.conf
engine/tests/: __init__.py  conftest.py  manual_test_cache_deliverable1.py  manual_test_cache_deliverable2.py  manual_test_cache_deliverable3.py  test_agent.py  test_api_routes.py  test_command_handlers.py  test_email_archive_backend.py  test_hybrid_search.py  test_sandbox_service.py  test_sharing.py  test_tool_factory.py  test_webhooks.py
engine/tests/agents/: conftest.py  test_memory_message_trainer.py
engine/tests/llm/: conftest.py  test_datetime_injection.py  test_proxy_client.py
engine/tests/rpc/: test_server_ws.py
engine/tests/services/: conftest.py  test_correction_learning.py  test_email_search.py  test_error_messages.py  test_facts_store.py  test_reanalyze_sweep.py  test_solve_prompt.py  test_whatsapp_search.py
engine/tests/storage/: conftest.py  test_campaigns.py  test_data_backfills.py  test_task_whatsapp_schema.py  test_whatsapp_blobs.py
engine/tests/tools/: test_list_mrcall_assistants.py  test_phase_a_registration.py  test_rule_routing.py
engine/tests/utils/: test_dates.py
engine/tests/whatsapp/: conftest.py  test_archived.py  test_revoke.py  test_sync.py  test_transcription.py
engine/tests/workers/: test_dedup_clustering.py  test_extraction_routing.py  test_memory_whatsapp.py  test_merge_gate.py  test_overload_abort.py  test_person_identifiers.py  test_task_creation_f7_create_respect.py  test_task_phase2_ordering.py  test_task_worker_bugs.py  test_tasks_whatsapp.py  test_voice_memory.py
engine/utils/: auto_reply_detector.py
engine/zylch/: config.py
engine/zylch/agents/: base.py  base_agent.py  emailer_agent.py  task_orchestrator_agent.py
engine/zylch/api/: token_storage.py
engine/zylch/assistant/: __init__.py  core.py  prompts.py
engine/zylch/auth/: __init__.py  refresh.py  session.py
engine/zylch/cli/: chat.py  main.py  setup.py  utils.py
engine/zylch/email/: imap_client.py
engine/zylch/intelligence/: __init__.py
engine/zylch/llm/: __init__.py  client.py  providers.py  proxy_client.py
engine/zylch/memory/: __init__.py  blob_storage.py  embeddings.py  hybrid_search.py  llm_merge.py  pattern_detection.py
engine/zylch/migrations/: add_task_items.sql  add_triage_tables.sql
engine/zylch/ml/: __init__.py  anonymizer.py
engine/zylch/prompts/: email_triage.txt
engine/zylch/router/: __init__.py  intent_classifier.py
engine/zylch/rpc/: account.py  agents.py  campaign_actions.py  dispatch.py  draft_queries.py  firebase_auth.py  google_actions.py  maintenance.py  methods.py  mrcall_actions.py  reaper.py  server.py  server_ws.py  setup.py  sms_actions.py  whatsapp_actions.py
engine/zylch/services/: channel_status.py  chat_compaction.py  chat_service.py  chat_session.py  command_handlers.py  command_matcher.py  correction_learning.py  email_search.py  error_messages.py  facts_store.py  job_executor.py  process_pipeline.py  settings_io.py  settings_schema.py  solve_constants.py  solve_tools.py  sync_service.py  task_executor.py  task_interactive.py  unified_conversation.py  whatsapp_search.py
engine/zylch/storage/: __init__.py  database.py  models.py  storage.py
engine/zylch/telegram/: bot.py
engine/zylch/tools/: __init__.py  calendar_sync.py  call_tools.py  config.py  contact_tools.py  create_memory_tool.py  crm_tools.py  (+15 more)
zylch_memory/: .coverage  README.md  ZYLCH_MEMORY_ARCHITECTURE.md  __init__.py  pyproject.toml
zylch_memory/tests/: test_basic.py
zylch_memory/zylch_memory/: __init__.py  config.py  embeddings.py  hybrid_search.py  llm_merge.py  pattern_detection.py
(+767 files in other folders)
