[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "zylch"
version = "0.1.0"
description = "AI-powered local sales intelligence assistant"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "click>=8.1.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.0",
    "numpy>=1.24.0",
    "fastembed>=0.4.0",
    "httpx>=0.25.0",
    "aisuite>=0.1.14",
    "anthropic>=0.39.0",
    "openai>=1.0.0",
    "cryptography>=41.0.0",
    "apscheduler>=3.10.0",
]

[project.scripts]
zylch = "zylch.cli.main:main"

[tool.setuptools.packages.find]
include = ["zylch*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
