[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zylch"
version = "0.1.29"
description = "Intelligent sales agent"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "click>=8.1.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.0",
    "numpy>=1.24.0",
    "fastembed>=0.4.0",
    "httpx>=0.28.1",
    "anthropic>=0.39.0",
    "openai>=1.0.0",
    "cryptography>=41.0.0",
    "apscheduler>=3.10.0",
    "pydantic-settings>=2.0.0",
    "beautifulsoup4>=4.12.0",
    "neonize>=0.3.15",
    "python-telegram-bot>=22.0",
    "rich>=13.0.0",
    "segno>=1.5.0",
    # neonize transitively imports python-magic for MIME detection.
    # >=0.4.27 looks in /opt/homebrew/lib by default on Apple Silicon
    # (brew's location), so users only need `brew install libmagic`.
    "python-magic>=0.4.27",
]

[project.scripts]
zylch = "zylch.cli.main:main"

[tool.setuptools.packages.find]
include = ["zylch*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
