[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zylch"
version = "0.1.33"
description = "Intelligent sales agent"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "click>=8.1.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.0",
    "numpy>=1.24.0",
    "fastembed>=0.4.0",
    "httpx>=0.28.1",
    "anthropic>=0.39.0",
    "openai>=1.0.0",
    "cryptography>=41.0.0",
    "apscheduler>=3.10.0",
    "pydantic-settings>=2.0.0",
    "beautifulsoup4>=4.12.0",
    "neonize>=0.3.15",
    "python-telegram-bot>=22.0",
    "rich>=13.0.0",
    "segno>=1.5.0",
    # neonize transitively imports python-magic for MIME detection.
    # >=0.4.27 looks in /opt/homebrew/lib by default on Apple Silicon
    # (brew's location), so dev users only need `brew install libmagic`.
    # Packaged builds bundle libmagic via zylch.spec — see the runtime
    # hook there.
    "python-magic>=0.4.27",
    # Windows: python-magic-bin ships its own libmagic.dll alongside, so
    # the packaged installer doesn't need anything from the host.
    "python-magic-bin>=0.4.14; sys_platform == 'win32'",
    # Native office-format extraction for read_document — without these,
    # the LLM has to fall back to run_python (which is in APPROVAL_TOOLS
    # and forces a "Conferma richiesta" UI for a harmless read).
    "pypdf>=4.0",
    "python-docx>=1.1",
    "openpyxl>=3.1",
]

[project.scripts]
zylch = "zylch.cli.main:main"

[tool.setuptools.packages.find]
include = ["zylch*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
