[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zylch-memory"
version = "1.0.0"
description = "Semantic memory system for AI agents with O(log n) retrieval"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Zylch Team", email = "dev@zylch.ai"}
]
keywords = ["ai", "memory", "embeddings", "vector-search", "semantic-search", "hnsw", "agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Database",
]

dependencies = [
    "sentence-transformers>=2.2.0",  # Embeddings generation
    "hnswlib>=0.7.0",                # HNSW vector indexing
    "numpy>=1.24.0",                 # Array operations
    "pydantic>=2.5.0",               # Configuration validation
    "pydantic-settings>=2.0.0",      # Settings management
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[project.urls]
Homepage = "https://github.com/zylch/zylch-memory"
Documentation = "https://github.com/zylch/zylch-memory/blob/main/README.md"
Repository = "https://github.com/zylch/zylch-memory"
Issues = "https://github.com/zylch/zylch-memory/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["zylch_memory*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=zylch_memory --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
